# vat-filemaker

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: code-guideline-rule.mdc
app/config/: settings.py
app/models/: card_company_model.py  card_model.py  card_transaction_model.py  common_code_model.py  vendor_model.py
app/repositories/: business_info_repository.py  card_company_repository.py  card_repository.py  card_transaction_repository.py  common_code_repository.py  database.py  schema.py  vendor_repository.py
app/repositories/sql/: business_info.sql  card_company_info.sql  card_info.sql  card_transaction.sql  common_code.sql  vendor_info.sql
app/services/: business_service.py  card_company_service.py  card_service.py  card_transaction_service.py  common_code_service.py  vendor_service.py
app/utils/: crypto.py  excel_reader.py  font.py
app/views/: business_registration_view.py  card_company_view.py  card_transaction_view.py  card_view.py  common_code_view.py  main_window.py  vendor_view.py
data/: common_code.sql  vat_filemaker.db
docs/: Code Guideline.md  Database.md  Task.md  font-guide.md  prd.md  prompt.md  trd.md  환경변수 관리방안.md
